--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,7 +78,11 @@ a:after {
 
 iframe#locationmap {
     height: 400px;
-    width: 400px;
+    width: 450px;
+}
+
+#mapholder {
+	padding-top: 20px;
 }
 
 /*---------------------------------------------------
@@ -223,6 +227,9 @@ iframe#locationmap {
 	vertical-align: middle;
 }
 
+#groomsman p {
+	color: #333;
+}
 
 #accommodationswrap {
 	background: #2c3e50;
@@ -265,6 +272,46 @@ iframe#locationmap {
 	color: white;
 }
 
+#registrywrap {
+	background: #2c3e50;
+	padding-top: 20px;
+	color: white;
+}
+
+#registrywrap h1 {
+	margin-top: 0px;
+	margin-bottom: 0px;
+	color: white;
+} 
+
+#registrywrap h3 {
+	color: white;
+}
+
+#registrywrap h5, p {
+	color: white;
+}
+
+#travelwrap {
+	background: #2c3e50;
+	padding-top: 20px;
+	color: white;
+}
+
+#travelwrap h1 {
+	margin-top: 0px;
+	margin-bottom: 0px;
+	color: white;
+} 
+
+#travelwrap h3 {
+	color: white;
+}
+
+#travelwrap h5, p {
+	color: white;
+}
+
 #footwrap {
 	background: #2f2f2f;
 	padding-top: 50px;
@@ -298,10 +345,19 @@ iframe#locationmap {
 }
 
 #c p {
-	color: white
+	color: white;
 }
 
 /* Global Values */
+
+.imgcell {
+	width: 100%;
+	height: 100%;
+}
+
+.righttext {
+	text-align: right;
+}
 
 .desc {
 	padding-top: 10px;
