--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -227,6 +227,26 @@ iframe#locationmap {
 	vertical-align: middle;
 }
 
+#welcomewrap {
+	background: #2c3e50;
+	padding-top: 20px;
+	color: white;
+}
+
+#welcomewrap h1 {
+	margin-top: 0px;
+	margin-bottom: 0px;
+	color: white;
+} 
+
+#welcomewrap h3 {
+	color: white;
+}
+
+#welcomewrap h5, p {
+	color: white;
+}
+
 #groomsman p {
 	color: #333;
 }
