--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -211,7 +211,7 @@ iframe#locationmap {
 
 #intro {
 	background: #2c3e50;
-	padding-top: 60px;
+	padding-top: 20px;
 	padding-bottom: 60px;
 	color: white;
 } 
@@ -369,6 +369,14 @@ iframe#locationmap {
 }
 
 /* Global Values */
+
+.whitetext p{
+	color: white;
+}
+
+.blacktext p{
+	color: #555;
+}
 
 .imgcell {
 	width: 100%;
