--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,13 +63,11 @@ a:after {
     transition: color 0.1s ease-in, background 0.1s ease-in;
 }
 
- hr {
-    display: block;
-    height: 1px;
+hr {
     border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
+    height: 1px;
+    background: #333;
+    background: -webkit-gradient(linear, 0 0, 100% 0, from(#b99655), to(#F2F2F2), color-stop(75%, #F2F2F2));
 }
 
 /*---------------------------------------------------
