--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -256,8 +256,28 @@ iframe#locationmap {
 	color: #b99655;
 }
 
-#accommodationswrap {
+#scheduleofeventswrap {
 	background: #16202d;
+	padding-top: 20px;
+	padding-bottom: 60px;
+	color: #b99655;
+}
+
+#scheduleofeventswrap h1 {
+	margin-top: 0px;
+	margin-bottom: 0px;
+	color: #b99655;
+} 
+
+#scheduleofeventswrap h3 {
+	color: #b99655;
+}
+
+#scheduleofeventswrap h5, p {
+	color: #b99655;
+}
+	
+#accommodationswrap {
 	padding-top: 20px;
 	padding-bottom: 60px;
 	color: #b99655;
@@ -298,7 +318,6 @@ iframe#locationmap {
 }
 
 #registrywrap {
-	background: #16202d;
 	padding-top: 20px;
 	color: #b99655;
 }
@@ -446,4 +465,74 @@ sm {
 .imagedropshadow {
     padding: 3px;
     border: double 2px #b99655;
+}
+
+.btn-calendar {
+  color: #ffffff;
+  border-color: #b99655;
+  border-radius: 24px;
+
+  background: -moz-linear-gradient(top,  #b99655 0%, #a27b3f 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b99655), color-stop(100%,#a27b3f)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #b99655 0%,#a27b3f 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #b99655 0%,#a27b3f 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #b99655 0%,#a27b3f 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #b99655 0%,#a27b3f 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b99655', endColorstr='#a27b3f',GradientType=0 ); /* IE6-9 */
+}
+
+.btn-calendar:hover,
+.btn-calendar:focus,
+.btn-calendar:active,
+.btn-calendar.active,
+.open .dropdown-toggle.btn-calendar {
+  color: #ffffff;
+  border-color: #b99655;
+  background: -moz-linear-gradient(top,  #a27b3f 0%, #846433 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a27b3f), color-stop(100%,#846433)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #a27b3f 0%,#846433 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #a27b3f 0%,#846433 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #a27b3f 0%,#846433 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #a27b3f 0%,#846433 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a27b3f', endColorstr='#846433',GradientType=0 ); /* IE6-9 */
+}
+
+.btn-calendar:active,
+.btn-calendar.active,
+.open .dropdown-toggle.btn-calendar {
+  background-image: none;
+  	background: -moz-linear-gradient(top,  #846433 0%, #604925 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#846433), color-stop(100%,#604925)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #846433 0%,#604925 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #846433 0%,#604925 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #846433 0%,#604925 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #846433 0%,#604925 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#846433', endColorstr='#604925',GradientType=0 ); /* IE6-9 */
+}
+
+.btn-calendar.disabled,
+.btn-calendar[disabled],
+fieldset[disabled] .btn-calendar,
+.btn-calendar.disabled:hover,
+.btn-calendar[disabled]:hover,
+fieldset[disabled] .btn-calendar:hover,
+.btn-calendar.disabled:focus,
+.btn-calendar[disabled]:focus,
+fieldset[disabled] .btn-calendar:focus,
+.btn-calendar.disabled:active,
+.btn-calendar[disabled]:active,
+fieldset[disabled] .btn-calendar:active,
+.btn-calendar.disabled.active,
+.btn-calendar[disabled].active,
+fieldset[disabled] .btn-calendar.active {
+  background-color: #b99655;
+  border-color: #b99655;
+}
+
+.btn-calendar .caret {
+  border-top-color: #fff;
+}
+
+.dropup .btn-calendar .caret{
+  border-bottom-color: #fff;
 }
