--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -3819,7 +3819,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   font-family: 'Fira Sans';font-size: 18px;
   line-height: 1.25em;
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: .25px;
   font-weight: 400;
   font-style: normal;
   list-style-type: none;
@@ -4060,7 +4060,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   clear: both;
 }
 
-@media (min-width: 930px) {
+@media (min-width: 767px) {
   .navbar {
     border-radius: 1px;
   }
@@ -4086,7 +4086,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   clear: both;
 }
 
-@media (min-width: 930px) {
+@media (min-width: 767px) {
   .navbar-header {
     float: left;
   }
@@ -4101,6 +4101,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   border-top: 1px solid transparent;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
   -webkit-overflow-scrolling: touch;
+
 }
 
 .navbar-collapse:before,
@@ -4127,12 +4128,15 @@ textarea.input-group-sm > .input-group-btn > .btn {
   overflow-y: auto;
 }
 
-@media (min-width: 930px) {
+@media (min-width: 767px) {
   .navbar-collapse {
-    width: auto;
+    width: 690px;
     border-top: 0;
     box-shadow: none;
     text-align: center;
+    position: relative;
+    margin: 15px auto;
+
   }
   .navbar-collapse.collapse {
     display: block !important;
@@ -4160,7 +4164,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   margin-left: -15px;
 }
 
-@media (min-width: 930px) {
+@media (min-width: 767px) {
   .container > .navbar-header,
   .container > .navbar-collapse {
     margin-right: 0;
@@ -4215,7 +4219,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   text-decoration: none;
 }
 
-@media (min-width: 930px) {
+@media (min-width: 767px) {
   .navbar > .container .navbar-brand {
     margin-left: -15px;
   }
@@ -4243,7 +4247,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   margin-top: 4px;
 }
 
-@media (min-width: 930px) {
+@media (min-width: 767px) {
   .navbar-toggle {
     display: none;
   }
@@ -4256,7 +4260,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .navbar-nav > li > a {
   padding-top: 10px;
   padding-bottom: 10px;
-  padding-left: 20px;
+  padding-left: 5px;
   line-height: 15px;
 }
 
@@ -4283,10 +4287,11 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 
-@media (min-width: 930px) {
+@media (min-width: 767px) {
   .navbar-nav {
     float: left;
     margin: 0;
+    display: block;
   }
   .navbar-nav > li {
     float: left;
@@ -4297,7 +4302,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 
-@media (min-width: 930px) {
+@media (min-width: 767px) {
   .navbar-left {
     float: left !important;
   }
@@ -4452,9 +4457,6 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
   border-color: #b99655;
-  -webkit-box-shadow: inset 0px -3px 3px 0px rgba(50, 50, 50, 0.55);
-  -moz-box-shadow:    inset 0px -3px 3px 0px rgba(50, 50, 50, 0.55);
-  box-shadow:         inset 0px -3px 3px 0px rgba(50, 50, 50, 0.55);
 }
 
 .navbar-default .navbar-nav > .dropdown > a:hover .caret,
