--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,6 +116,20 @@ iframe#locationmap {
 	3.1 Topbar
 ---------------------------------------------------*/
 
+.scrollme {
+background-position: top left;
+background-size: cover;
+background: url(../img/DC-bg-4.png) no-repeat center top;background-position: bottom center;
+background-size: auto;
+background-attachment: fixed;
+background-repeat: no-repeat;
+position: absolute;
+min-width: 100%;
+width: 100%;
+min-height: 100%;
+z-index: 1;
+}
+
 #section-topbar {
 	position: fixed;
 	top: 0;
@@ -200,6 +214,16 @@ span {
 /*---------------------------------------------------
 	SECTION WRAPS
 ---------------------------------------------------*/
+
+
+
+#sectionwrap {
+	background: #fff;
+	padding: 20px;
+	color: #b99655;
+	max-width: 740px;
+	margin: 100px auto 30px auto;
+}
 
 /* Header Wrap */
 
@@ -307,11 +331,14 @@ span {
 	color: #b99655;
 }
 
+
 #scheduleofeventswrap {
 	background: #fff;
-	padding-top: 70px;
-	padding-bottom: 60px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 	color: #b99655;
+	max-width: 740px;
+	margin: 100px auto 30px auto;
 }
 
 #scheduleofeventswrap h1 {
@@ -522,9 +549,10 @@ sm {
 }
 
 .top-edge-shadow {
-	-webkit-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.55);
-	-moz-box-shadow:    0px 2px 2px 0px rgba(50, 50, 50, 0.55);
-	box-shadow:         0px 2px 2px 0px rgba(50, 50, 50, 0.55);
+	border: solid 1px rgba(255, 255, 255, .8);
+	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .4);
+	-moz-box-shadow:    0 0 8px rgba(0, 0, 0, .4);
+	box-shadow:         0 0 8px rgba(0, 0, 0, .4);
 }
 
 .bottom-edge-shadow {
