--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,7 +89,15 @@ hr.whitebackground {
     border: 0;
     height: 1px;
     background: #333;
-    background: -webkit-gradient(linear, 0 0, 100% 0, from(#b99655), to(#F2F2F2), color-stop(75%, #F2F2F2));
+    background: -webkit-gradient(linear, 0 0, 100% 0, from(#b99655), to(#F2F2F2), color-stop(100%, #FFFFFF));
+}
+
+hr.datedivider {
+    border: 0;
+    height: 1px;
+    background: -moz-linear-gradient(left, #FFFFFF 0%, #f2f2f2 35%, #b99655 50%, #f2f2f2 65%, #FFFFFF 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(left, #FFFFFF 0%,#f2f2f2 35%,#b99655 50%,#f2f2f2 65%,#FFFFFF 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to right, #FFFFFF 0%,#f2f2f2 35%,#b99655 50%,#f2f2f2 65%,#FFFFFF 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 }
 
 hr.bluebackground {
@@ -494,13 +502,22 @@ span {
 	border-radius: 50%;
 }
 
+.imghotelcell {
+	width: 80%;
+	height: 80%;
+	max-width: 280px;
+	max-height: 280px;
+	margin: 10px;
+	border-radius: 50%;
+}
+
 .imggalcell {
 	width: 100%;
 	height: 100%;
 }
 
 .photodiv {
-	max-width: 320px;
+	max-width: 350px;
 	max-height: 600px;
 }
 
