first half of last updates, changing nav and adding new pages

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -400,7 +400,7 @@ p {
   line-height: 1.4;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 953px) {
   .lead {
     font-size: 21px;
   }
@@ -597,7 +597,7 @@ dd {
   margin-left: 0;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 953px) {
   .dl-horizontal dt {
     float: left;
     width: 160px;
@@ -927,7 +927,7 @@ pre code {
   width: 100%;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 953px) {
   .container {
     max-width: 750px;
   }
@@ -1587,7 +1587,7 @@ table th[class*="col-"] {
   border-color: #f8e5be;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 953px) {
   .table-responsive {
     width: 100%;
     margin-bottom: 15px;
@@ -1936,7 +1936,7 @@ textarea.input-lg {
   color: #737373;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 953px) {
   .form-inline .form-group {
     display: inline-block;
     margin-bottom: 0;
@@ -1994,7 +1994,7 @@ textarea.input-lg {
   clear: both;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 953px) {
   .form-horizontal .control-label {
     text-align: right;
   }
@@ -3353,7 +3353,7 @@ input[type="button"].btn-block {
   margin-bottom: 1px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 953px) {
   .navbar-right .dropdown-menu {
     right: 0;
     left: auto;
@@ -3816,13 +3816,14 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .nav > li {
   position: relative;
   display: block;
-  font-family: 'Fira Sans';font-size: 18px;
+  font-family: 'Fira Sans';font-size: 17px;
   line-height: 1.25em;
   text-transform: uppercase;
-  letter-spacing: .25px;
-  font-weight: 400;
+  letter-spacing: .01em;
+  font-weight: 500;
   font-style: normal;
   list-style-type: none;
+  word-spacing: .01em;
 }
 
 .nav > li > a {
@@ -3910,7 +3911,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   text-align: center;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 953px) {
   .nav-tabs.nav-justified > li {
     display: table-cell;
     width: 1%;
@@ -3966,7 +3967,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   text-align: center;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 953px) {
   .nav-justified > li {
     display: table-cell;
     width: 1%;
@@ -4060,7 +4061,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   clear: both;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 952px) {
   .navbar {
     border-radius: 1px;
   }
@@ -4086,7 +4087,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   clear: both;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 952px) {
   .navbar-header {
     float: left;
   }
@@ -4128,9 +4129,9 @@ textarea.input-group-sm > .input-group-btn > .btn {
   overflow-y: auto;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 952px) {
   .navbar-collapse {
-    width: 690px;
+    width: 875px;
     border-top: 0;
     box-shadow: none;
     text-align: center;
@@ -4164,7 +4165,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   margin-left: -15px;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 952px) {
   .container > .navbar-header,
   .container > .navbar-collapse {
     margin-right: 0;
@@ -4176,7 +4177,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   border-width: 0 0 1px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 953px) {
   .navbar-static-top {
     border-radius: 0;
   }
@@ -4190,7 +4191,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   border-width: 0 0 1px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 953px) {
   .navbar-fixed-top,
   .navbar-fixed-bottom {
     border-radius: 0;
@@ -4219,7 +4220,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   text-decoration: none;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 952px) {
   .navbar > .container .navbar-brand {
     margin-left: -15px;
   }
@@ -4247,7 +4248,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   margin-top: 4px;
 }
 
-@media (min-width: 767px) {
+@media (min-width: 952px) {
   .navbar-toggle {
     display: none;
   }
@@ -4264,7 +4265,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   line-height: 15px;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 952px) {
   .navbar-nav .open .dropdown-menu {
     position: static;
     float: none;
@@ -4287,7 +4288,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 
-@media (min-width: 767px) {
+@media (min-width: 952px) {
   .navbar-nav {
     float: left;
     margin: 0;
@@ -4302,7 +4303,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 
-@media (min-width: 767px) {
+@media (min-width: 952px) {
   .navbar-left {
     float: left !important;
   }
@@ -4323,7 +4324,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
           box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
 }
 
-@media (min-width: 768px) {
+@media (min-width: 953px) {
   .navbar-form .form-group {
     display: inline-block;
     margin-bottom: 0;
@@ -4346,13 +4347,13 @@ textarea.input-group-sm > .input-group-btn > .btn {
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 952px) {
   .navbar-form .form-group {
     margin-bottom: 5px;
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 953px) {
   .navbar-form {
     width: auto;
     padding-top: 0;
@@ -4393,7 +4394,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   margin-bottom: 15px;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 953px) {
   .navbar-text {
     margin-right: 15px;
     margin-left: 15px;
@@ -4484,7 +4485,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   border-bottom-color: #777777;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 952px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
     color: #777777;
   }
@@ -4600,7 +4601,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
   border-bottom-color: #ffffff;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 952px) {
   .navbar-inverse .navbar-nav .open .dropdown-menu > .dropdown-header {
     border-color: #080808;
   }
@@ -4965,7 +4966,7 @@ a.list-group-item.active > .badge,
   border-radius: 6px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 953px) {
   .jumbotron {
     padding-top: 48px;
     padding-bottom: 48px;
@@ -5752,7 +5753,7 @@ body.modal-open,
   margin-left: 0;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 953px) {
   .modal-dialog {
     right: auto;
     left: 50%;
@@ -6197,7 +6198,7 @@ body.modal-open,
   text-shadow: none;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 953px) {
   .carousel-control .icon-prev,
   .carousel-control .icon-next {
     width: 30px;
@@ -6286,7 +6287,7 @@ td.visible-xs {
   display: none !important;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 952px) {
   .visible-xs {
     display: block !important;
   }
@@ -6299,7 +6300,7 @@ td.visible-xs {
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 953px) and (max-width: 991px) {
   .visible-xs.visible-sm {
     display: block !important;
   }
@@ -6351,7 +6352,7 @@ td.visible-sm {
   display: none !important;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 952px) {
   .visible-sm.visible-xs {
     display: block !important;
   }
@@ -6364,7 +6365,7 @@ td.visible-sm {
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 953px) and (max-width: 991px) {
   .visible-sm {
     display: block !important;
   }
@@ -6416,7 +6417,7 @@ td.visible-md {
   display: none !important;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 952px) {
   .visible-md.visible-xs {
     display: block !important;
   }
@@ -6429,7 +6430,7 @@ td.visible-md {
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 953px) and (max-width: 991px) {
   .visible-md.visible-sm {
     display: block !important;
   }
@@ -6481,7 +6482,7 @@ td.visible-lg {
   display: none !important;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 952px) {
   .visible-lg.visible-xs {
     display: block !important;
   }
@@ -6494,7 +6495,7 @@ td.visible-lg {
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 953px) and (max-width: 991px) {
   .visible-lg.visible-sm {
     display: block !important;
   }
@@ -6546,7 +6547,7 @@ td.hidden-xs {
   display: table-cell !important;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 952px) {
   .hidden-xs {
     display: none !important;
   }
@@ -6559,7 +6560,7 @@ td.hidden-xs {
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 953px) and (max-width: 991px) {
   .hidden-xs.hidden-sm {
     display: none !important;
   }
@@ -6611,7 +6612,7 @@ td.hidden-sm {
   display: table-cell !important;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 952px) {
   .hidden-sm.hidden-xs {
     display: none !important;
   }
@@ -6624,7 +6625,7 @@ td.hidden-sm {
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 953px) and (max-width: 991px) {
   .hidden-sm {
     display: none !important;
   }
@@ -6676,7 +6677,7 @@ td.hidden-md {
   display: table-cell !important;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 952px) {
   .hidden-md.hidden-xs {
     display: none !important;
   }
@@ -6689,7 +6690,7 @@ td.hidden-md {
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 953px) and (max-width: 991px) {
   .hidden-md.hidden-sm {
     display: none !important;
   }
@@ -6741,7 +6742,7 @@ td.hidden-lg {
   display: table-cell !important;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 952px) {
   .hidden-lg.hidden-xs {
     display: none !important;
   }
@@ -6754,7 +6755,7 @@ td.hidden-lg {
   }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 953px) and (max-width: 991px) {
   .hidden-lg.hidden-sm {
     display: none !important;
   }
