--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,8 +38,15 @@ h4{
 	font-size: 24px;
 }
 
-h5, h6 {
-	font-weight: 500;
+h5 {
+	font-weight: 700;
+    color: #b99655;
+	font-family: "Lato";
+	font-size: 17px;
+}
+
+h6 {
+	font-weight: 600;
     color: #b99655;
 	font-family: "Lato";
 	font-size: 16px;
